--- a/html/main.html
+++ b/html/main.html
@@ -18,6 +18,9 @@
   <link rel="stylesheet" href="/css/experimental.css"/>
   <link rel="stylesheet" href="/css/new.css"/>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       background: var(--bg-color);
     }
@@ -26,23 +29,42 @@
     }
     #transition-fade-div-thing {
       position: absolute;
-      background: linear-gradient(transparent, var(--bg-color));
-      height: 500px;
+      background: linear-gradient(transparent, var(--bg-color), transparent);
+      height: 1000px;
       width: 100%;
       z-index: 2;
       bottom: 0;
+      margin-bottom: -500px;
     }
     #the-good-stuff {
+      background-color: var(--bg-color);
       font-smooth: auto;
       -webkit-font-smoothing: auto;
-      margin-top: 100vh;
+      padding-top: 100vh;
       display: flex;
       align-items: center;
       flex-direction: column;
       width: 100%;
-      background: var(--bg-color);
-      height: 100vh;
+      height: 200vh;
       font-family: "Fira Code";
+      position: relative;
+      & > * {
+        z-index: 1;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url("./../images/bg/axolotls_transparentbgbluesquare.png");
+        background-repeat: repeat;
+        background-size: 600px;
+        background-position: center;
+        opacity: 0.1;
+        z-index: 0;
+      }
     }
   </style>
   <style id="scrollbar"></style>
@@ -87,7 +109,7 @@
     <div>Hey, I'm Spax</div>
   </div>
   <!--small bit of javascript to enhance the page-->
-  <script>
+  <!--<script>
 const startColorChangeAt =
   document.querySelector(`#bg`).offsetHeight
   - document.querySelector(`#transition-fade-div-thing`).offsetHeight/3
@@ -115,6 +137,6 @@ window.onscroll = () => {
   }
   document.querySelector(`#scrollbar`).innerHTML = css;
 };
-  </script>
+  </script>-->
 </body>
 </html>
