--- a/html/test.html
+++ b/html/test.html
@@ -46,7 +46,7 @@
     I was born and raised in the Castle<span class="break"></span>
     Town near here.<span class="break end"></span>
     Left sometime in my late youth to<span class="break"></span>
-    travel the world.
+   <strong> travel the world.</strong>
     <img src="/images/test/test2.png" class="test">
   </article>
 </body>
