--- a/html/spaxDay2.html
+++ b/html/spaxDay2.html
@@ -54,7 +54,7 @@
             <img src="
           /images/faces/claire/Sigh.png
             "></img>
-          Anyways it's time for some fucking debugging.
+          Anyways it's time for some f**ing debugging.
         </div>
       </div>
       <div class="text-box flex-container unselectable">
@@ -129,7 +129,7 @@
             <img src="
           /images/faces/yoki/Sweat_Drop.png
             "></img>
-          (I still don't know where the <i>fuck</i> I am-)
+          (I still don't know where the <i>hell</i> I am)
         </div>
       </div>
       <br>
@@ -143,7 +143,7 @@
             <img src="
           /images/faces/spax/Disappointed.png
             "></img>
-          I need to redo this site SO bad.
+          I need to redo this site SO bad.It's all messed up
         </div>
       </div>
     </div>
