--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -26,7 +26,7 @@ haha now it's edited by spax:)
     
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <link rel="stylesheet" href="/css/game.css" type="text/css">
-    <title>Happy Birthday Spax</title>
+    <title>Happy Birthday Spax(to me)</title>
     
     <style>
 
