--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -52,7 +52,7 @@
       Surprised
     </article>
     <article who="spax" emotion="sus">
-      Sus
+      Suspicious
     </article>
     <article who="spax" emotion="sweat-drop">
       Sweat Drop
